k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: employee-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers: 
      - name: backend
        image: sanketf5/employeemanagementapp-backend:latest
        ports:
          - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: employee-app
spec:
  selector:
    app: backend
  ports:
    - port: 5000
